src/test/InvalidNullableUse/InvalidNullableUse.panda
class Test {
    method test() {
        Console.writeLine(Int?)
    }
}